fixed images on page breaks in print

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -83,6 +83,16 @@
 
 //Formatting for Download as PDF/print dialog
 @media print {
+  .gatsby-resp-image-wrapper {
+    page-break-inside: avoid !important;
+    break-inside: avoid !important;
+    max-height:400px!important;
+    width: auto !important;
+    .gatsby-resp-image-image {
+      max-height:400px!important;
+      width: auto !important;
+    }
+  }
   a {
     color: #000000;
   }
@@ -97,9 +107,10 @@
     background-color: white;
     margin-top: 0;
     padding-top: 3rem;
+    display:relative;
   }
   [class*="main"] {
-    padding-top: 0;
+    padding-top:0;
   }
   [class*="column"] {
     width: 100%;
@@ -161,6 +172,11 @@
     hr {
       display: none;
     }
+  }
+  .articleContent {
+    .bx--row:nth-of-type(1) {
+      margin-top:2rem;
+  }
   }
   [class*="NextPrevious"] {
     display: none;
